[tool.poetry]
name = "meetup-storage"
version = "0.1.0"
description = ""
authors = ["Павел <king-he@mail.ru>"]
readme = "README.md"
packages = [{include = "meetup_storage"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
environs = "^9.5.0"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
